# tinyc

./: .gitignore  CMakeLists.txt  README.md  tinyc.cpp  tinyc.h
exemples/: test2.ci  test3.ci  test4.ci
src/: interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  main.h  main_test.c  main_test.h  parser.c  parser.h  run.c  run.h  tcalloc.c  tcalloc.h  tcstring.c  tcstring.h
test/: interpreter_test.c  interpreter_test.h  main_test.c  main_test.h  main_test2.c  parser_test.c  parser_test.h  test1.ci
